refactor: change home directory to heroku

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "home": "https://sample-dashboard-frontend.herokuapp.com/",
   "name": "sample-dashboard-frontend",
   "version": "0.1.0",
   "private": true,
